--- a/UTN/Lab||/lab2-practica/FLEX/index.html
+++ b/UTN/Lab||/lab2-practica/FLEX/index.html
@@ -1,40 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>ejercicio 9</title>
 </head>
-
 <body>
     <div class="contenedor">
-    <div class="card-uno">
-        <div class="encabezado-uno">Tarjeta izquierda</div>
-        <div class="cuerpo-uno">
-            <p>Contenido del cuerpo</p>
-            <p>Contenido del cuerpo</p>
-            <p>Contenido del cuerpo</p>
+        <div class="izquierda">Columna izquierda</div>
+        <div class="derecha">
+            <div class="derecha-alta">Derecha parte alta</div>
+            <div class="derecha-baja">Derecha parte baja</div>
         </div>
-        <div class="pie-uno">Pie</div>
     </div>
-    <div class="card-dos">
-        <div class="encabezado-dos">Tarjeta centro</div>
-        <div class="cuerpo-dos">
-            <p>Contenido del cuerpo</p>
-        </div>
-        <div class="pie-dos">Pie</div>
-    </div>
-    <div class="card-tres">
-        <div class="encabezado-tres">Tarjeta derecha</div>
-        <div class="cuerpo-tres">
-            <p>Contenido del cuerpo</p>
-        </div>
-        <div class="pie-tres">Pie</div>
-    </div>
-</div>
 </body>
-
 </html>
